--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	<center><h1>Time ,Space and Complexity</h1></center>
+	<p>Time complexity ,efficent</p>
+	<p><b>Space complexity</b> 'O(n)'</p>
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
